# freezerbox

./: .bumpversion.cfg  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: test_and_release.yml
docs/: conf.py
freezerbox/: __init__.py  config.py  fields.py  model.py  utils.py
freezerbox/group_by/: attr.py  dependency.py
freezerbox/loaders/: excel.py
freezerbox/stepwise/: dilute.py  make.py
po4/: __init__.py  combos.py  config.py  errors.py  fields.py  model.py  protocols.py  utils.py
po4/cli/: main.py
po4/loaders/: excel.py
po4/stepwise/: make.py
tests/: mock_model.py  pytest.ini  schema_helpers.py  test_combos.nt  test_combos.py  test_config.nt  test_config.py  test_dilute.py  test_fields.py  test_group_by_dependency.nt  test_group_by_dependency.py  test_load_excel.py  test_make.nt  test_make.py  test_make.toml  test_model.nt  test_model.py  test_protocols.py  test_protocols.toml  test_utils.nt  test_utils.py  test_utils.toml
tests/dummy_excel_db/: fragments.xlsx  oligos.xlsx  plasmids.xlsx
tests/dummy_excel_db/fragments/: f002.dna
tests/dummy_excel_db/plasmids/: p003.dna  p004.dna
tests/dummy_excel_db/sandbox/: f004.dna
tests/mock_excel_db/: buffers.xlsx  fragments.xlsx  oligos.xlsx  plasmids.xlsx  proteins.xlsx  strains.xlsx
tests/mock_excel_db/fragments/: f4.dna
tests/mock_excel_db/plasmids/: p002.dna
tests/mock_excel_db/proteins/: r2.prot
tests/mock_excel_db/sandbox/: f003.dna
