[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "po4"
author = "Kale Kundert"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kalekundert/po4'
description-file = 'README.rst'
requires-python = "~=3.8"
requires = [
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: MIT License',
]

[tool.flit.metadata.requires-extra]
tests = [
  'pytest',
  'pytest-cov',
  'coveralls',
]
docs = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[tool.flit.metadata.urls]
'Documentation' = 'https://po4.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/po4'
'Bug Tracker' = 'https://github.com/kalekundert/po4/issues'
'Continuous Integration' = 'https://github.com/kalekundert/po4/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/po4'

[tool.semantic_release]
version_variable = 'po4/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
